# youtube-stats

./: .gitignore  .netlify-checklist.md  API_FEATURES.md  DEPLOY.md  GET_API_KEY.md  OAUTH_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE_MODES.md  WEB_APP.md  netlify.toml  package.json  pyproject.toml  youtube_wrapped.py
public/: app.js  index.html  styles.css
